Fix flexbox issues on Firefox
- Give explicit flex basis for image wrap children

--- a/_sass/pages.scss
+++ b/_sass/pages.scss
@@ -4,7 +4,7 @@ section.posts {
 article.post {
     .header {
             h1.top-subtitle {
-                font-size: 0.85rem;
+                font-size: 0.8rem;
                 margin-top: 0;
                 margin-bottom: 0;
             }
@@ -17,10 +17,10 @@ article.post {
             .meta {
                 margin-bottom: 3rem;
             }
-            
+
             .meta * {
                 color: #777;
-                font-size: 0.85rem;
+                font-size: 0.8rem;
             }
     }
     .content a {
