--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -70,7 +70,7 @@ emph {
         align-self: center;
 
         img {
-            max-width: 100%;
+            width: 100%;
         }
     }
 }
@@ -82,6 +82,11 @@ emph {
 
         .image-block {
             margin-right: 2rem;
+            flex: 1 0 35%;
+        }
+
+        p {
+            flex: 1 0 65%;
         }
     }
 }
